test/testdata/functions/anonymous/invalid_property_access_error.lox
fun() {}.y; // error: property access is not valid for 'function' object
